bad/if_else_cond_null.example_compiler_output
ERROR
[1mbad/if_else_cond_null.lat:3:6: [1;31merror: [0;1mif condition has to be of type `boolean`, not `null`[m
	if (null) {} else {}
	    [1;32m^[m
